<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Taak_1" Id="{4dc2f315-6e55-411e-b7c1-780b357820cb}">
    <Declaration><![CDATA[TYPE Taak_1 :
	(
		NieuweOrderGaragist,
		VoorraadAdministratief,
		VerzamelingArtikelen,
		OrderGeannuleerd,
		OrderVoltooid
	) := NieuweOrderGaragist;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>